<resources>
    <string name="app_name">Apetyt na sport</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Waga</string>
    <string name="height">Wzrost</string>
    <string name="age">Wiek</string>
    <string name="next">Dalej</string>
    <string name="calculate_tmr">Oblicz zapotrzebowanie</string>
    <string name="training_intensity">Intensywność ćwiczeń</string>
    <string name="your_tmr">Twoje zapotrzebowanie</string>
    <string name="kcal_unit">%1$d kcal</string>
    <string name="protein">Białko</string>
    <string name="g_unit">%1$.2f g</string>
    <string name="fat">Tłuszcze</string>
    <string name="carbohydrate">Węglowodany</string>
    <string name="prepare_diet">Wyznacz dietę</string>
    <string name="shape">Budowa ciała</string>
    <string name="endomorphic">Endomorfik</string>
    <string name="ectomorphic">Ektomorfik</string>
    <string name="mezomorphic">Mezomorfik</string>
    <string name="select_sport">Wybierz dyscyplinę sportu</string>
    <string name="select_gender">Wybierz płeć</string>
    <string name="describe_shape">Opisz budowę ciała</string>
    <string name="describe_training">Opisz dzienny trening</string>
    <string name="trainings">Ilość treningów</string>
    <string name="trainingTime">Czas treningu (min)</string>
    <string name="computing_diet">Wyznaczanie diety</string>
    <string name="product">Produkt</string>
    <string name="protein_short">B</string>
    <string name="carbohydrate_short">W</string>
    <string name="fat_short">T</string>
    <string name="prepare_diet_error">Podczas wyznaczania diety wystąpił błąd</string>
    <string name="new_diet">Wyznacz nową dietę</string>
    <string name="select_allergens_title">Wskaż alergeny lub produkty do wyłączenia z diety</string>
    <string name="change_link"><u>Zmień</u></string>
    <string name="allergens_selected">Wybrano %1$d alergenów i nawyków żywieniowych</string>
    <string name="cancel">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="take_a_while">Proces ten może chwilę zająć</string>
    <string name="extended_search_info">Rozszerzanie zakresu o dodatkowe produkty</string>
    <string-array name="allergen_items">
        <item>Mięso</item>
        <item>Produkty zwierzęce</item>
        <item>Zboża zawierające gluten</item>
        <item>Skorupiaki</item>
        <item>Jaja</item>
        <item>Ryby</item>
        <item>Orzeszki ziemne (arachidowe)</item>
        <item>Pozostałe orzechy</item>
        <item>Soja</item>
        <item>Mleko (łącznie z laktozą)</item>
        <item>Seler</item>
        <item>Gorczyca</item>
        <item>Nasiona sezamu</item>
        <item>Dwutlenek siarki i siarczyny</item>
        <item>Łubin</item>
        <item>Mięczaki</item>
    </string-array>
</resources>