<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Header"
        android:text="@string/describe_training"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/slider_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainings"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.slider.Slider
                android:id="@+id/trainings_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"
                android:value="1"
                app:tickVisible="false"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/trainings_input"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:text="0"
                android:textAlignment="center"
                tools:ignore="HardcodedText,LabelFor,DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/slider_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainingTime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.slider.Slider
                android:id="@+id/trainingTime_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stepSize="5"
                android:valueFrom="0"
                android:valueTo="300"
                android:value="60"
                app:tickVisible="false"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/trainingTime_input"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:text="0"
                android:textAlignment="center"
                tools:ignore="HardcodedText,LabelFor" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/intensity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/slider_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_intensity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.slider.Slider
                android:id="@+id/intensity_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tickVisible="false"
                android:stepSize="0.1"
                android:valueFrom="0"
                android:valueTo="10"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/intensity_input"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:text="0"
                android:textAlignment="center"
                tools:ignore="HardcodedText,LabelFor" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_tmr" />

</LinearLayout>